[Web] Fix:some layout bugs.

--- a/source/web/src/static/styles/bingMap.less
+++ b/source/web/src/static/styles/bingMap.less
@@ -128,7 +128,7 @@
                 font-size:16px;
                 vertical-align:middle;
                 cursor:pointer;
-
+                white-space: nowrap;
                 @media @phone {
                     height:40px;
                     font-size:14px;
