--- a/source/web/src/static/styles/project/signinForm.less
+++ b/source/web/src/static/styles/project/signinForm.less
@@ -48,6 +48,9 @@
 
         max-width: 220px;
         width:215px;
+        body[lang=en_GB] & {
+            width: 170px;
+        }
 
         @media @phone {
             max-width:100%;
