--- a/source/web/src/static/styles/project/siteFooter.less
+++ b/source/web/src/static/styles/project/siteFooter.less
@@ -177,7 +177,7 @@
                 @media @phone {
                     float:right;
                     margin-left: 0;
-                    margin-top: 102px
+                    margin-top: 50px
                 }
                 float: left;
                 margin-top: @support-margin-top;
