--- a/source/web/src/static/styles/propertyToRentCreate.less
+++ b/source/web/src/static/styles/propertyToRentCreate.less
@@ -221,6 +221,7 @@ main {
                                 width: 187px;
                                 vertical-align: middle;
                                 line-height: 1.2;
+                                padding-top: 4px;
                             }
                         }
                     }
